# pa3-inventory-management-ddelvalfraire

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: app.h  inventory.h  list.h  map.h  parser.h  product.h
src/: app.cpp  inventory.cpp  main.cpp  parser.cpp  product.cpp
tests/: test.cpp
